// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (entry) 1`] = `
{
  "btcCandle": {
    "close": 40500,
    "dt": "2024-01-01",
    "high": 41000,
    "low": 39000,
    "open": 40000,
    "timestamp": 1,
    "turnover": 20000000,
    "volume": 500,
  },
  "candle": {
    "close": 102,
    "dt": "2024-01-01",
    "high": 105,
    "low": 95,
    "open": 100,
    "timestamp": 1,
    "turnover": 100000,
    "volume": 1000,
  },
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (exit) 1`] = `
{
  "btcCandle": {
    "close": 40500,
    "dt": "2024-01-01",
    "high": 41000,
    "low": 39000,
    "open": 40000,
    "timestamp": 1,
    "turnover": 20000000,
    "volume": 500,
  },
  "candle": {
    "close": 102,
    "dt": "2024-01-01",
    "high": 105,
    "low": 95,
    "open": 100,
    "timestamp": 1,
    "turnover": 100000,
    "volume": 1000,
  },
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "closePlan": {
      "direction": "LONG",
      "price": 100,
      "timestamp": 1700000123000,
    },
    "code": "CLOSE_BY_SIGNAL",
    "kind": "exit",
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterCoreDecision params snapshot (skip) 1`] = `
{
  "btcCandle": {
    "close": 40500,
    "dt": "2024-01-01",
    "high": 41000,
    "low": 39000,
    "open": 40000,
    "timestamp": 1,
    "turnover": 20000000,
    "volume": 500,
  },
  "candle": {
    "close": 102,
    "dt": "2024-01-01",
    "high": 105,
    "low": 95,
    "open": 100,
    "timestamp": 1,
    "turnover": 100000,
    "volume": 1000,
  },
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "NO_SIGNAL",
    "kind": "skip",
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterEnrichAi params snapshot 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "quality": 5,
  "runtime": {
    "ai": {
      "enabled": true,
      "minQuality": 5,
    },
    "ml": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
  },
  "signal": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterEnrichMl params snapshot 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "runtime": {
    "ai": {
      "enabled": true,
      "minQuality": 5,
    },
    "ml": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
  },
  "signal": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterPlaceOrder params snapshot (with signal) 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "orderResult": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "runtime": {
    "ai": {
      "enabled": true,
      "minQuality": 5,
    },
    "ml": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
  },
  "signal": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots afterPlaceOrder params snapshot (without signal) 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "orderResult": "ENTRY",
  "runtime": {
    "ai": {
      "enabled": false,
      "minQuality": undefined,
    },
    "ml": {
      "enabled": false,
      "mlThreshold": undefined,
      "strategyConfig": {
        "ENV": "LIVE",
        "MAKE_ORDERS": true,
        "TRENDLINE_CONFIG": {},
      },
    },
  },
  "signal": undefined,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots beforeClosePosition params snapshot 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "closePlan": {
      "direction": "LONG",
      "price": 100,
      "timestamp": 1700000123000,
    },
    "code": "CLOSE_BY_SIGNAL",
    "kind": "exit",
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots beforeEntryGate params snapshot (with signal) 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "makeOrdersEnabled": true,
  "minAiQuality": 5,
  "quality": 5,
  "runtime": {
    "ai": {
      "enabled": true,
      "minQuality": 5,
    },
    "ml": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
  },
  "signal": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots beforeEntryGate params snapshot (without signal) 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "makeOrdersEnabled": true,
  "minAiQuality": 4,
  "quality": undefined,
  "runtime": {
    "ai": {
      "enabled": false,
      "minQuality": undefined,
    },
    "ml": {
      "enabled": false,
      "mlThreshold": undefined,
      "strategyConfig": {
        "ENV": "LIVE",
        "MAKE_ORDERS": true,
        "TRENDLINE_CONFIG": {},
      },
    },
  },
  "signal": undefined,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots beforePlaceOrder params snapshot (with signal) 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": true,
        "minQuality": 5,
      },
      "ml": {
        "enabled": true,
        "mlThreshold": 0.5,
        "strategyConfig": {
          "X": 1,
        },
      },
    },
    "signal": {
      "direction": "LONG",
      "figures": {},
      "indicators": {},
      "interval": "15",
      "prices": {
        "currentPrice": 100,
        "riskRatio": 2,
        "stopLossPrice": 95,
        "takeProfitPrice": 105,
      },
      "signalId": "sig-1",
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000000000,
    },
  },
  "entryContext": {
    "direction": "SHORT",
    "interval": "15",
    "isConfigFromBacktest": false,
    "prices": {
      "currentPrice": 222,
      "riskRatio": 1.2,
      "stopLossPrice": 230,
      "takeProfitPrice": 200,
    },
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000123000,
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "runtime": {
    "ai": {
      "enabled": true,
      "minQuality": 5,
    },
    "ml": {
      "enabled": true,
      "mlThreshold": 0.5,
      "strategyConfig": {
        "X": 1,
      },
    },
  },
  "signal": {
    "direction": "LONG",
    "figures": {},
    "indicators": {},
    "interval": "15",
    "prices": {
      "currentPrice": 100,
      "riskRatio": 2,
      "stopLossPrice": 95,
      "takeProfitPrice": 105,
    },
    "signalId": "sig-1",
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000000000,
  },
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots beforePlaceOrder params snapshot 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "ENTRY",
    "entryContext": {
      "direction": "SHORT",
      "interval": "15",
      "isConfigFromBacktest": false,
      "prices": {
        "currentPrice": 222,
        "riskRatio": 1.2,
        "stopLossPrice": 230,
        "takeProfitPrice": 200,
      },
      "strategy": "TrendLine",
      "symbol": "ETHUSDT",
      "timestamp": 1700000123000,
    },
    "kind": "entry",
    "orderPlan": {
      "qty": 3,
      "stopLossPrice": 230,
      "takeProfits": [
        {
          "price": 200,
          "rate": 1,
        },
      ],
    },
    "runtime": {
      "ai": {
        "enabled": false,
      },
      "ml": {
        "enabled": false,
      },
    },
    "signal": undefined,
  },
  "entryContext": {
    "direction": "SHORT",
    "interval": "15",
    "isConfigFromBacktest": false,
    "prices": {
      "currentPrice": 222,
      "riskRatio": 1.2,
      "stopLossPrice": 230,
      "takeProfitPrice": 200,
    },
    "strategy": "TrendLine",
    "symbol": "ETHUSDT",
    "timestamp": 1700000123000,
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "runtime": {
    "ai": {
      "enabled": false,
      "minQuality": undefined,
    },
    "ml": {
      "enabled": false,
      "mlThreshold": undefined,
      "strategyConfig": {
        "ENV": "LIVE",
        "MAKE_ORDERS": true,
        "TRENDLINE_CONFIG": {},
      },
    },
  },
  "signal": undefined,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots onInit params snapshot 1`] = `
{
  "btcData": [],
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "data": [],
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots onRuntimeError params snapshot 1`] = `
{
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "NO_SIGNAL",
    "kind": "skip",
  },
  "env": "LIVE",
  "error": "test-hook-error",
  "isConfigFromBacktest": false,
  "signal": undefined,
  "stage": "afterCoreDecision",
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;

exports[`strategyRuntime hook params snapshots onSkip params snapshot 1`] = `
{
  "btcCandle": {
    "close": 40500,
    "dt": "2024-01-01",
    "high": 41000,
    "low": 39000,
    "open": 40000,
    "timestamp": 1,
    "turnover": 20000000,
    "volume": 500,
  },
  "candle": {
    "close": 102,
    "dt": "2024-01-01",
    "high": 105,
    "low": 95,
    "open": 100,
    "timestamp": 1,
    "turnover": 100000,
    "volume": 1000,
  },
  "config": {
    "ENV": "LIVE",
    "MAKE_ORDERS": true,
  },
  "connector": {
    "closePosition": "[Function]",
    "placeOrder": "[Function]",
  },
  "decision": {
    "code": "FILTER_BLOCKED",
    "kind": "skip",
  },
  "env": "LIVE",
  "isConfigFromBacktest": false,
  "strategyName": "TrendLine",
  "symbol": "ETHUSDT",
  "userName": "root",
}
`;
